--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
 
+html {
+  background: #7e7ec9;
+}
+
+
+
 .App {
   background: #7e7ec9;
   /* height: 371px; */
   padding: 40px;
+}
+
+h1 {
+  text-align: center;
+  
 }
 
 .btn-block {
@@ -14,12 +25,13 @@
 .form-control {
   display: block;
   width: 100%;
-  margin-top: 10px;
+  margin-top: 30px;
+ 
 }
 
 .input2 {
   display: block;
-  width: 427%;
+  width: 689%;
   margin-top: 10px;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
