--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ html {
 .App {
   background: #7e7ec9;
   /* height: 371px; */
-  padding: 40px;
+  padding: 70px;
 }
 
 h1 {
@@ -70,7 +70,8 @@ button.btn.btn-primary.btn-block {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(300px, -50%);
+  transform: translate(580px, -50%);
+  border-radius: 50%;
 }
 
 .text {
@@ -80,7 +81,7 @@ button.btn.btn-primary.btn-block {
 
 
 
-@media (max-width: 776px) {
+@media (max-width: 992px) {
   input.input2 {
     width: 135%;
   }
@@ -94,7 +95,7 @@ button.btn.btn-primary.btn-block {
   .remove.btn.btn-danger {
     position: absolute;
     top: 30px;
-    left: -30px;
+    left: -21pc;
     border-radius: 50%;
   }
 }
