--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@ html {
   background: #7e7ec9;
   /* height: 371px; */
   padding: 40px;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -29,24 +31,10 @@ h1 {
  
 }
 
-.input2 {
-  display: block;
-  width: 689%;
-  margin-top: 10px;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: var(--bs-body-color);
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: var(--bs-body-bg);
-  background-clip: padding-box;
-  border: var(--bs-border-width) solid var(--bs-border-color);
-  border-radius: var(--bs-border-radius);
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+div {
+  width:100%
 }
+
 
 .list-group {
   display: flex;
@@ -71,6 +59,7 @@ button.btn.btn-primary.btn-block {
   top: 50%;
   left: 50%;
   transform: translate(300px, -50%);
+  width: 35px;
 }
 
 .text {
